# AWA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  main.py  notifier.py  pyproject.toml
docs/: development.md
plugins/: llm.py
plugins/configs-examples/: llm.json
watchers/: __init__.py  imap_watcher.py  rss_watcher.py  system_watcher.py
